# marray

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark  benchmark.exs  rebar.config
.github/workflows/: linux.yml  macos.yml  windows.yml
c_src/: marray.cpp  nif_utils.cpp
src/: marray.app.src  marray.erl  marray_app.erl  marray_nif.erl  marray_sup.erl
